Trying to fix bg on mobile

--- a/stylesheets/about_me_styles.css
+++ b/stylesheets/about_me_styles.css
@@ -20,23 +20,10 @@ body {
 }
 
 #fixed-bg {
-    right: 0;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    margin: 0;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-
-
-
     top: 0;
     background: -moz-linear-gradient(top, rgba(26, 26, 26, 1) 0%, rgba(26, 26, 26, 0.7) 50%, rgba(26, 26, 26, 1) 100%), url('../public/about_me_background_3.png') no-repeat;
-    /* background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(26, 26, 26, 1)), color-stop(50%, rgba(26, 26, 26, 0.7)), color-stop(100%, rgba(26, 26, 26, 1))), url('../public/about_me_background_3.png') no-repeat; */
-    /* background: -webkit-linear-gradient(top, rgba(26, 26, 26, 1) 0%, rgba(26, 26, 26, 0.7) 50%, rgba(26, 26, 26, 1) 100%), url('../public/about_me_background_3.png') no-repeat; */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(26, 26, 26, 1)), color-stop(50%, rgba(26, 26, 26, 0.7)), color-stop(100%, rgba(26, 26, 26, 1))), url('../public/about_me_background_3.png') no-repeat;
+    background: -webkit-linear-gradient(top, rgba(26, 26, 26, 1) 0%, rgba(26, 26, 26, 0.7) 50%, rgba(26, 26, 26, 1) 100%), url('../public/about_me_background_3.png') no-repeat;
     background: -o-linear-gradient(top, rgba(26, 26, 26, 1) 0%, rgba(26, 26, 26, 0.7) 50%, rgba(26, 26, 26, 1) 100%), url('../public/about_me_background_3.png') no-repeat;
     background: -ms-linear-gradient(top, rgba(26, 26, 26, 1) 0%, rgba(26, 26, 26, 0.7) 50%, rgba(26, 26, 26, 1) 100%), url('../public/about_me_background_3.png') no-repeat;
     background: linear-gradient(to bottom, rgba(26, 26, 26, 1) 0%, rgba(26, 26, 26, 0.7) 50%, rgba(26, 26, 26, 1) 100%), url('../public/about_me_background_3.png') no-repeat;
